Rename app and package to SjekkUT
- renamed app
- renamed package
- upgraded gradle
- moved the splash PNG images to nodpi to avoid crash on startup
  Note: They will now scale in a wrong manner, but we'll fix this later

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "20.0.0"
 
     defaultConfig {
-        applicationId "no.dnt.opptur"
+        applicationId "no.dnt.sjekkut"
         minSdkVersion 15
         targetSdkVersion 22
         versionCode 10014
