Initial version of successful OAuth authorization
- include secrets (client_id and client_secret) into build.gradle,
  the build now fails for anyone who has not decrypted the gpg files
- added OAuthActivity and launch it instead of MainActivity (for testing)
- added convenience extractUrlArgument(..) to Utils
- OAuthActivity takes you through login (embedded WebView) and authorization and then gets a valid token and immediately refreshes it (for testing)
- DNTConnect has getToken(..) and refreshToken(..) which returns DNTConnectToken on success

Note: Ideally I'd use https://github.com/openid/AppAuth-Android or something similar to do OAuth 2.0 the "right way"
in a native app, but at the moment the world is not quite ready for it (old Android version etc).

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -10,6 +10,8 @@ android {
         targetSdkVersion 22
         versionCode 100
         versionName "0.1.0"
+        resValue "string", "client_id", new File('../secret/www.dnt.no.client_id').text
+        resValue "string", "client_secret", new File('../secret/www.dnt.no.client_secret').text
     }
 
     compileOptions {
