--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 /secret/www.dnt.no.client_id
 /secret/www.dnt.no.client_secret
 /secret/maps.google.com.static.api_key
+/android/secret/release_keystore.jks
+/android/secret/releasesigningconfig.gradle
