--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -4,6 +4,15 @@ android {
     compileSdkVersion 22
     buildToolsVersion "23.0.3"
 
+    signingConfigs {
+        release {
+            storeFile file("wrong")
+            keyAlias "wrong"
+            storePassword "wrong"
+            keyPassword "wrong"
+        }
+    }
+
     defaultConfig {
         applicationId "no.dnt.sjekkut"
         minSdkVersion 16
@@ -21,6 +30,7 @@ android {
 
     buildTypes {
         release {
+            signingConfig signingConfigs.release
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
@@ -40,4 +50,18 @@ dependencies {
     compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'net.hockeyapp.android:HockeySDK:3.5.0'
+}
+
+task loadReleaseSigningConfig << {
+    apply from: '../secret/releasesigningconfig.gradle'
+    android.signingConfigs.release.storeFile = storeFile
+    android.signingConfigs.release.storePassword = storePassword
+    android.signingConfigs.release.keyAlias = keyAlias
+    android.signingConfigs.release.keyPassword = keyPassword
+}
+
+tasks.whenTaskAdded { theTask ->
+    if (theTask.name.equals("assembleRelease") || theTask.name.equals("signingReport")) {
+        theTask.dependsOn "loadReleaseSigningConfig"
+    }
 }
