--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -14,6 +14,7 @@ android {
     }
 
     defaultConfig {
+        manifestPlaceholders = [HOCKEYAPP_APP_ID: "46275d541fbc4c63b7e45fbc04edd371"]
         applicationId "no.dnt.sjekkut"
         minSdkVersion 16
         targetSdkVersion 22
@@ -50,7 +51,7 @@ dependencies {
     compile 'com.squareup.okhttp:okhttp:2.3.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'net.hockeyapp.android:HockeySDK:3.5.0'
+    compile 'net.hockeyapp.android:HockeySDK:4.0.2'
 }
 
 task loadReleaseSigningConfig << {
