--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
+        <meta-data
+            android:name="net.hockeyapp.android.appIdentifier"
+            android:value="${HOCKEYAPP_APP_ID}" />
 
         <activity
             android:name=".MainActivity"
@@ -39,10 +42,6 @@
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/app_name"
             android:screenOrientation="portrait" />
-
-        <activity android:name="net.hockeyapp.android.UpdateActivity" />
-        <activity android:name="net.hockeyapp.android.FeedbackActivity" />
-        <activity android:name="net.hockeyapp.android.PaintActivity" />
     </application>
 
 </manifest>
