--- a/ios/SjekkUt.xcworkspace/xcshareddata/xcschemes/SjekkUt.xcscheme
+++ b/ios/SjekkUt.xcworkspace/xcshareddata/xcschemes/SjekkUt.xcscheme
@@ -65,7 +65,8 @@
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
-      allowLocationSimulation = "YES">
+      allowLocationSimulation = "YES"
+      language = "nb">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
