--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -23,6 +23,7 @@ android {
         archivesBaseName = "SjekkUT_v${versionName}"
         resValue "string", "client_id", new File('../secret/www.dnt.no.client_id').text
         resValue "string", "client_secret", new File('../secret/www.dnt.no.client_secret').text
+        resValue "string", "api_key", new File('../secret/dev.nasjonalturbase.no.api_key').text
     }
 
     compileOptions {
