--- a/ios/SjekkUt.xcworkspace/xcshareddata/xcschemes/SjekkUt.xcscheme
+++ b/ios/SjekkUt.xcworkspace/xcshareddata/xcschemes/SjekkUt.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "6C6FE1491A82332C002B5DD5"
-               BuildableName = "SjekkUt.app"
+               BuildableName = "SjekkUT.app"
                BlueprintName = "SjekkUt"
                ReferencedContainer = "container:SjekkUt.xcodeproj">
             </BuildableReference>
@@ -48,7 +48,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "6C6FE1491A82332C002B5DD5"
-            BuildableName = "SjekkUt.app"
+            BuildableName = "SjekkUT.app"
             BlueprintName = "SjekkUt"
             ReferencedContainer = "container:SjekkUt.xcodeproj">
          </BuildableReference>
@@ -72,7 +72,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "6C6FE1491A82332C002B5DD5"
-            BuildableName = "SjekkUt.app"
+            BuildableName = "SjekkUT.app"
             BlueprintName = "SjekkUt"
             ReferencedContainer = "container:SjekkUt.xcodeproj">
          </BuildableReference>
@@ -105,7 +105,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "6C6FE1491A82332C002B5DD5"
-            BuildableName = "SjekkUt.app"
+            BuildableName = "SjekkUT.app"
             BlueprintName = "SjekkUt"
             ReferencedContainer = "container:SjekkUt.xcodeproj">
          </BuildableReference>
