--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -42,7 +42,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.1.1'
+    compile 'com.android.support:appcompat-v7:22.2.1'
     compile 'com.google.android.gms:play-services:7.3.0'
     compile 'com.jakewharton.timber:timber:4.1.2'
     compile 'com.melnykov:floatingactionbutton:1.3.0'
@@ -54,6 +54,8 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'net.hockeyapp.android:HockeySDK:4.0.2'
+    compile 'com.android.support:support-v4:22.2.1'
+    compile 'com.android.support:recyclerview-v7:22.2.1'
 }
 
 task loadReleaseSigningConfig << {
@@ -63,6 +65,7 @@ task loadReleaseSigningConfig << {
     android.signingConfigs.release.keyAlias = keyAlias
     android.signingConfigs.release.keyPassword = keyPassword
 }
+
 
 tasks.whenTaskAdded { theTask ->
     if (theTask.name.equals("assembleRelease") || theTask.name.equals("signingReport")) {
