--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,8 +1,9 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
+    compileSdkVersion 24
     buildToolsVersion "23.0.3"
+    useLibrary 'org.apache.http.legacy'
 
     signingConfigs {
         release {
@@ -42,7 +43,10 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.2.1'
+    compile 'com.android.support:appcompat-v7:24.1.1'
+    compile 'com.android.support:percent:24.1.1'
+    compile 'com.android.support:recyclerview-v7:24.1.1'
+    compile 'com.android.support:support-v4:24.1.1'
     compile 'com.google.android.gms:play-services:7.3.0'
     compile 'com.jakewharton.timber:timber:4.1.2'
     compile 'com.melnykov:floatingactionbutton:1.3.0'
@@ -54,8 +58,6 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'net.hockeyapp.android:HockeySDK:4.0.2'
-    compile 'com.android.support:support-v4:22.2.1'
-    compile 'com.android.support:recyclerview-v7:22.2.1'
 }
 
 task loadReleaseSigningConfig << {
