--- a/ios/SjekkUT/Settings.bundle/Acknowledgements.plist
+++ b/ios/SjekkUT/Settings.bundle/Acknowledgements.plist
@@ -508,7 +508,7 @@ OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
 WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 </string>
 			<key>Title</key>
-			<string>SSKeychain</string>
+			<string>SAMKeychain</string>
 			<key>Type</key>
 			<string>PSGroupSpecifier</string>
 		</dict>
