--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -49,7 +49,10 @@ dependencies {
     compile 'com.android.support:percent:24.2.0'
     compile 'com.android.support:recyclerview-v7:24.2.0'
     compile 'com.android.support:support-v4:24.2.0'
+    compile 'com.facebook.stetho:stetho-okhttp3:1.3.1'
+    compile 'com.facebook.stetho:stetho:1.3.1'
     compile 'com.google.android.gms:play-services:7.3.0'
+    compile 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.0.2'
     compile 'com.jakewharton.timber:timber:4.1.2'
     compile 'com.jakewharton:butterknife:8.2.1'
     compile 'com.melnykov:floatingactionbutton:1.3.0'
