--- a/ios/Podfile
+++ b/ios/Podfile
@@ -6,22 +6,20 @@ inhibit_all_warnings!
 use_frameworks!
 
 def shared_pods
-   pod 'Alamofire', '~> 3.4'
-   pod 'SAMKeychain', '~> 1.5.0'
+   pod 'Alamofire'
+   pod 'SAMKeychain'
 end
 
 target 'SjekkUt' do
    shared_pods
-   pod 'ReachabilitySwift'
+   pod 'HockeySDK'
+   pod 'NSURLRequest-cURL'
+   pod 'DateTools'
+   pod 'FontAwesome+iOS'
+   pod 'OCMock'
+   pod 'AlamofireImage'
+   pod 'AlamofireNetworkActivityIndicator'
    pod 'AlamofireSwiftyJSON'
-   pod 'HockeySDK', '~> 4.0.1'
-   pod 'NSURLRequest-cURL', '~> 0.0.1'
-   pod 'DateTools', '~> 1.5.0'
-   pod 'FontAwesome+iOS', '~> 0.1.4'
-   pod 'OCMock', '~> 3.3'
-   pod 'Alamofire', '~> 3.4'
-   pod 'AlamofireImage', '~> 2.0'
-   pod 'AlamofireNetworkActivityIndicator', '~> 1.0'
 end
 
 target 'SjekkUtTests' do
