Make logout button be enabled/disabled depending on connection state
- added the eventbus library from greenrobot
- post ConnectionChangedEvent on the bus in NetworkStateReceiver
- make ProfileStatsFragment register to the bus
- made onConnectionChanged subscribe to the event
- Note: not properly tested, the oauth server is down for maintenance :)

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'net.hockeyapp.android:HockeySDK:4.0.2'
+    compile 'org.greenrobot:eventbus:3.0.0'
     compile fileTree(dir: 'libs', include: ['*.jar'])
 }
 
